--- a/style.css
+++ b/style.css
@@ -21,3 +21,5 @@ ul {display: inline-block; vertical-align: top;	width: 20%;	margin-right: 15%;}
 
 .imagempes {width: 50%;}
 .imagempes
+
+.titulo-centralizado {font-size: 300%; font-family: 'Times New Roman', Times, serif; color: black;}
